large screen layout bugg

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,9 +7,7 @@
   &--warning,
   &--info{
     @extend %btn;
-    width: 90%;
-    height: 50px;
-    margin: 20px;
+    @extend %grid-sz;
     color:$white;
   }
 }
