--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,8 +1,11 @@
 //Images
-.img{
+.img {
+  @extend %centered;
   margin-bottom: em(24px);
   max-width: 100%;
   height:auto;
+  @include grid(flex);
+  justify-content: center;
   &--frame {
     border: 1px solid palette(grey,x-light);
     padding: em(12px);
@@ -12,4 +15,16 @@
     border-radius:$br--round;
 
   }
+  &--logo{
+    @extend %nav-item-lg;
+    padding-top: 20px;
+    display: block;
+    margin: auto;
+
+  }
+}
+
+.grid_col a{
+  padding: 20px;
+
 }
